Refactoring to use depency injection of tsyringe
