# src/modules/cars/useCases/createCategory/CreateCategoryController.ts
@@ -1,15 +1,15 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { CreateCategoryUseCase } from "./CreateCategoryUseCase";
 
 class CreateCategoryController {
-  // eslint-disable-next-line prettier/prettier
-  constructor(private createCategoryUseCase: CreateCategoryUseCase) { }
-
   async handle(request: Request, response: Response): Promise<Response> {
     const { name, description } = request.body;
 
-    const category = this.createCategoryUseCase.execute({ name, description });
+    const createCategoryUseCase = container.resolve(CreateCategoryUseCase);
+
+    const category = createCategoryUseCase.execute({ name, description });
 
     return response.status(201).json(category);
   }
