# src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -1,17 +1,23 @@
-import { Request, Response } from "express"
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
 import { CreateSpecificationUseCase } from "./CreateSpecificationUseCase";
 
-
 class CreateSpecificationController {
-  constructor(private createSpecificationUseCase: CreateSpecificationUseCase) { }
-
-  handle(request: Request, response: Response) {
+  async handle(request: Request, response: Response): Promise<Response> {
     const { name, description } = request.body;
 
-    const specification = this.createSpecificationUseCase.execute({ name, description })
+    const createSpecificationUseCase = container.resolve(
+      CreateSpecificationUseCase
+    );
+
+    const specification = await createSpecificationUseCase.execute({
+      name,
+      description,
+    });
 
     return response.status(201).json(specification);
   }
 }
 
-export { CreateSpecificationController }
+export { CreateSpecificationController };
